# find-dups

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/find_dups/: __init__.py  main.py
src/find_dups/utils/: __init__.py  file_dict_utils.py  fileutils.py  report.py  validation.py
tst/unit/: test_utils.py
